Final Psychic Game

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 <body>
 
 
+    <h1>Guess what letter I'm thinking of!</h1>
+    <h2>Press any letter to begin!<h2/>
+    <h3>This is your guess: <span id="userGuess"></span></h3> 
+
+
+	
+
+	<p>Wins: <span id="wins"></span></p>
+	<p>Losses: <span id="losses"></span></p>
+	<p>Tries Remaining: <span id="guessesLeft"></p></li>
+	<p>All User Guesses: <span id="trackUserGuesses"></span></p>
+	  
+
+	
+	        
+
+
 
 	<script src="assets/javascript/game.js"></script>
 </body>
